fix: prevent text auto-scaling on iOS with -webkit-text-size-adjust

--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@
     --font-size-normal: 11px;
 }
 
+html {
+  -webkit-text-size-adjust: 100%;
+}
+
 body {
     font-family: "Merriweather", serif;
     background: #f5f5f5;
